#351 fix icon current value vertical align

--- a/src/assets/stylesheets/components/citeriagroup/criteriagroup.scss
+++ b/src/assets/stylesheets/components/citeriagroup/criteriagroup.scss
@@ -107,7 +107,7 @@
 			padding: 0 14px;
 			span {
 				display: inline-block;
-				vertical-align: bottom;
+				vertical-align: middle;
 				min-width: 20px;
 			}
 			&.selected {
